:tada: added /api/post/[id] update/PATCH route
